[gd_scene load_steps=5 format=3 uid="uid://gravity_mage"]

[ext_resource type="Script" path="res://scripts/entities/hero_base.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/core/stats_component.gd" id="2_stats"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 56.0

[node name="GravityMage" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 2
script = ExtResource("1_script")
hero_id = "gravity_mage"

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.3)
position = Vector2(0, 8)
z_index = -1

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackRange" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_attack")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_stats")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
